examples/gen-a/tests/snapshots/test_ser__basic_str_enum.snap
---
source: examples/gen-a/tests/test_ser.rs
expression: def
---
type: enum@v1
name: BasicStrEnum
namespace: abc.corp.test
description: ~
version: 1
variants:
  A:
    name: A
    namespace: abc.corp.test
    description: some doc
    version: ~
    value: a
  B:
    name: B
    namespace: abc.corp.test
    description: ~
    version: ~
    value: b
