examples/gen-a/tests/snapshots/test_ser__operation_error_ser.snap
---
source: examples/gen-a/tests/test_ser.rs
expression: de
---
type: known
code: 1
desc: some desc
