examples/gen-a/tests/snapshots/test_ser__some_struct_with_enum.snap
---
source: examples/gen-a/tests/test_ser.rs
expression: def
---
type: struct@v1
name: SomeStructWithEnum
namespace: abc.corp.test
description: ~
version: 1
fields:
  enum_value:
    name: enum_value
    namespace: abc.corp.test
    description: field doc
    version: ~
    type:
      compound_type:
        kind: enum
        ref: SomeEnum
    optional: false
